--- a/demo/3d/3d 散点图 三个点.html
+++ b/demo/3d/3d 散点图 三个点.html
@@ -5,8 +5,8 @@
 </head>
 <body style="height: 100%; margin: 0">
 <div id="container" style="height: 100%"></div>
-<script type="text/javascript" src="http://echarts.baidu.com/gallery/vendors/echarts/echarts.min.js"></script>
-<script type="text/javascript" src="http://echarts.baidu.com/gallery/vendors/echarts-gl/echarts-gl.min.js"></script>
+<script type="text/javascript" src="../../js/echarts.min.js"></script>
+<script type="text/javascript" src="../../js/echarts-gl.min.js"></script>
 <script type="text/javascript">
   let dom = document.getElementById("container");
   let myChart = echarts.init(dom);
